--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="both" id="yes">Click Me!</button>
-    <button class="both" id="no">No, Click Me!</button> 
+    <button id="yes">Click Me!</button>
+    <button id="no">No, Click Me!</button> 
   </body>
 </html>
